--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <header id="Hero-Section" class="text-light text-end py-5 mt-5">
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
-                <h1 class="display-1 fw-bold my-5">
-                    Comidas del fin <br> del mundo
+                <h1 class="display-1 fw-bold my-5 text-black">
+                    PROGRAMADOR WEB<br>
                 </h1>
                 <p class="my-5">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
@@ -120,7 +120,7 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">LENGUAJES DE PROGRAMACIÓN</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Explicabo iure sint, perspiciatis distinctio molestias nihil
@@ -137,7 +137,7 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">FROND END</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
@@ -154,7 +154,7 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">BACKEND</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Obcaecati facere quibusdam sint id laborum magni velit ducimus
